samples/_failures_safe/1761465885_add36d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a635436.c: In function ‘main’:
./samples/SAFE/__tmp_8a635436.c:147:5: error: expected declaration or statement at end of input
  147 |     printf("\n");
      |     ^~~~~~
